Changes since version 0.8.4-rc5
- Bookmarking a VDR channel now bookmarks it as kmplayer://vdrsource/channel
- When controlpanel is in autohide mode, move it over the video instead of
  shifting the video up causing annoying flickering (bug 96861)
- up/down/ok/back/menu for VDR are added to the toolbar as well when connected
- Unmute DVB card when VDR reports volume of zero, restore on exit
- Auto scroll playlist when current is outside the viewing area
Changes since version 0.8.4-rc4
- Recording now stops movie playing after hitting 'Start Recording'
- Be less strict with parsing ASX (and SMIL) play list files
- Internals: merge code from backends, with the 'never reaching' goal to add
  a new backend just by configuration (plus a backend player of course)
- Internals: move playlist handling to Partbase, instead of each process have
  their own tricks. Also kxineplayer accepts '-vo x11' now, kgstreamer eats
  local url's w/o file:// prefix.
- Internals: re-implement backend XML config and TV config data using own
  DOM-like classes for no less reason than increasing the code coolness :-)
- Added view video/playlist/console to toolbar
- Playlist will default appear on top if there are only a few items
- TV inputs/channels are now displayed inside the playlist, instead of a menu
- kxvplayer also accounts for frequency setting when guessing the xvideo port,
  more usable for TV viewing
- Move all library classes to the KMPlayer namespace and strip the KMPlayer
  prefix in the name. Rename class KMPlayer itself to PartBase.
- Binary data detection when reading a playlist that turns out to be
  video/audio stream (instead of creating a playlist w/ wierd names)
Changes since version 0.8.4-rc3
- Look for title entries in ASX and .pls files for playlist items
- DemiBold font for playlist and console log window for readability
- Begin of GStreamer backend support, local file only
- Allow disconnect/connect for VDR while still playing, allows other apps to 