@@ -1,3 +1,7 @@
-SUBDIRS = mimetypes protocols src icons
+if need_kde33_compatibility
+  KDE33PROTOCOLS = protocols
+endif
+
+SUBDIRS = mimetypes $(KDE33PROTOCOLS) src icons
 
 EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO kmplayer.lsm 
